<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:paddingHorizontal="70dp"
        android:background="#1D1E20">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/card_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastre_um_cart_o_de_cr_dito"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_text_description"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/register_card_btn"
            android:text="@string/cadastrar_cart_o"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#11C76F"
            />


    </LinearLayout>


</layout>