<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1D1E20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingTop="80dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_cartao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:hint="@string/numero_cartao"
                style="@style/EditTextCardRegister"/>

            <EditText
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number"
                android:hint="@string/nome_do_titular"
                style="@style/EditTextCardRegister"/>

            <EditText
                android:id="@+id/expire_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_name"
                android:hint="@string/vencimento"
                style="@style/EditTextCardRegister"/>

            <EditText
                android:id="@+id/cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/expire_date"
                app:layout_constraintTop_toBottomOf="@+id/card_name"
                android:hint="CVV"
                style="@style/EditTextCardRegister"
                android:layout_marginLeft="30dp"/>

            <Button
                android:id="@+id/finish_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/buttonshape"
                android:backgroundTint="#11C76F"
                android:text="@string/cadastrar_cart_o"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expire_date"
                android:layout_marginTop="40dp"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</layout>